hphp/hack/test/typecheck/reactive/rx_if_implements17.php.coeffects.exp
File "rx_if_implements17.php", line 15, characters 5-9:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "rx_if_implements17.php", line 13, characters 32-33:
  The local (enclosing) context provides the capability set {}
